--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-screens": "~2.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "@react-native-community/masked-view": "0.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@react-navigation/drawer": "^5.8.5",
+    "@react-navigation/native": "^5.7.0",
     "babel-preset-expo": "~8.1.0"
   },
   "private": true
