--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "latest",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/stack": "^5.7.0",
+    "d3": "^5.16.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
