--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/stack": "^5.7.0",
     "d3": "^5.16.0",
+    "d3-shape": "^1.3.7",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
@@ -29,7 +30,8 @@
     "@babel/core": "^7.8.6",
     "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/native": "^5.7.0",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "d3-scale": "^3.2.1"
   },
   "private": true
 }
