--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "svg-path-properties": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/native": "^5.7.0",
     "babel-preset-expo": "~8.1.0",
-    "d3-scale": "^3.2.1"
+    "d3-scale": "^3.2.1",
+    "d3-svg": "^0.2.2",
+    "react-native-canvas": "^0.1.37"
   },
   "private": true
 }
