--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^5.16.0",
     "d3-shape": "^1.3.7",
     "expo": "~38.0.8",
+    "expo-linear-gradient": "^8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-async": "^10.0.1",
