--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "dependencies": {
     "@expo/vector-icons": "latest",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "^5.9.5",
-    "@react-navigation/drawer": "^5.8.5",
-    "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.0",
     "d3": "^5.16.0",
     "d3-shape": "^1.3.7",
@@ -23,23 +20,24 @@
     "react-async": "^10.0.1",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-canvas": "^0.1.37",
+    "react-native-chart-kit": "^6.4.1",
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-header-scroll-view": "^2.0.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "^2.9.0",
+    "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.4.0",
     "svg-path-properties": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@react-navigation/drawer": "^5.8.5",
+    "@react-navigation/native": "^5.7.0",
     "babel-preset-expo": "~8.1.0",
     "d3-scale": "^3.2.1",
-    "d3-svg": "^0.2.2"
+    "d3-svg": "^0.2.2",
+    "react-native-canvas": "^0.1.37"
   },
   "private": true
 }
