--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-chart-kit": "^6.4.1",
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^4.0.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
