--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/stack": "^5.7.0",
     "d3": "^5.16.0",
     "d3-shape": "^1.3.7",
+    "events": "^3.2.0",
     "expo": "~38.0.8",
     "expo-linear-gradient": "^8.2.1",
     "expo-status-bar": "^1.0.2",
+    "lodash": "^4.17.19",
     "react": "~16.11.0",
     "react-async": "^10.0.1",
     "react-dom": "~16.11.0",
@@ -30,6 +32,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.11.7",
+    "recharts": "^1.8.5",
     "svg-path-properties": "^1.0.4"
   },
   "devDependencies": {
