finito di aggiungere le tabelle con i dati regionali

--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.marinimau.covidashboard"
     },
     "web": {
       "favicon": "./assets/favicon.png"
