--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-native-chart-kit": "^6.4.1",
     "react-native-circular-progress": "^1.3.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-marquee": "^0.3.2",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-text-ticker": "^1.6.0",
     "react-native-web": "~0.11.7",
     "recharts": "^1.8.5",
     "svg-path-properties": "^1.0.4"
