--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "latest",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/stack": "^5.7.0",
     "d3": "^5.16.0",
     "d3-shape": "^1.3.7",
