--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-async": "^10.0.1",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-appearance": "^0.3.4",
     "react-native-chart-kit": "^6.4.1",
     "react-native-circular-progress": "^1.3.6",
+    "react-native-dynamic": "^1.0.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-marquee": "^0.3.2",
     "react-native-paper": "^4.0.1",
