--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-chart-kit": "^6.4.1",
     "react-native-circular-progress": "^1.3.6",
     "react-native-dynamic": "^1.0.0",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-marquee": "^0.3.2",
     "react-native-paper": "^4.0.1",
