--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-svg-web": "^1.0.9",
     "react-native-text-ticker": "^1.6.0",
     "react-native-web": "~0.11.7",
     "recharts": "^1.8.5",
