--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "http://marinimau.github.io/covid19_dashboard",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
   },
   "dependencies": {
     "@expo/vector-icons": "latest",
@@ -50,6 +53,7 @@
     "babel-preset-expo": "~8.1.0",
     "d3-scale": "^3.2.1",
     "d3-svg": "^0.2.2",
+    "gh-pages": "^3.1.0",
     "react-native-canvas": "^0.1.37"
   },
   "private": false
