--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-svg-web": "^1.0.9",
     "react-native-text-ticker": "^1.6.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.9.1",
     "recharts": "^1.8.5",
     "svg-path-properties": "^1.0.4"
   },
