--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "latest",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/picker": "1.6.0",
+    "@react-native-community/picker": "^1.6.0",
     "@react-navigation/stack": "^5.7.0",
     "d3": "^5.16.0",
     "d3-shape": "^1.3.7",
@@ -29,6 +29,7 @@
     "react-native-appearance": "^0.3.4",
     "react-native-chart-kit": "^6.4.1",
     "react-native-circular-progress": "^1.3.6",
+    "react-native-dropdown-picker": "^3.7.0",
     "react-native-dynamic": "^1.0.0",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~1.6.0",
